--- a/assets/styles/components/_breadcrumb.scss
+++ b/assets/styles/components/_breadcrumb.scss
@@ -3,7 +3,7 @@
   @extend .mdl-color-text--grey-400;
 
   padding: 0;
-  margin-bottom: 0;
+  margin-bottom: 2rem;
   list-style: none;
   @include clearfix;
 
