--- a/assets/styles/layouts/partials/_entry-share.scss
+++ b/assets/styles/layouts/partials/_entry-share.scss
@@ -17,7 +17,7 @@ $line-color:     #00C300;
     margin-bottom: 0;
 
     &:not(:last-child) {
-      margin-right: 8px;
+      margin-right: .5rem;
     }
   }
 }
