--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,10 +1,9 @@
-
 * {
   box-sizing: border-box;
-}
-*:before,
-*:after {
-  box-sizing: border-box;
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
 }
 
 :root {
@@ -31,7 +30,7 @@ body {
 
   font-weight: $font-weight-base;
 
-	-webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   // bg, color
@@ -59,14 +58,6 @@ a {
   }
 }
 
-// Code
-pre {
-  overflow: auto;
-}
-pre, code {
-  font-family: $font-family-monospace;
-}
-
 // Figures
 figure {
   margin: 0 0 1rem;
@@ -86,4 +77,9 @@ table {
 
 th {
   text-align: left;
+}
+
+// input
+input {
+  font-feature-settings: "liga" 0;
 }
