--- a/assets/styles/plugins/_prismjs.scss
+++ b/assets/styles/plugins/_prismjs.scss
@@ -24,7 +24,7 @@ $base0f: #a3685a;
 
 code[class*="language-"],
 pre[class*="language-"] {
-  font-size: 1rem;
+  font-size: inherit;
   direction: ltr;
   text-align: left;
   white-space: pre;
