fix: archive page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -31,6 +31,7 @@
 @import "layouts/home";
 @import "layouts/sidebar";
 @import "layouts/footer";
+@import "layouts/archive";
 @import "layouts/partials/entry";
 @import "layouts/partials/entry-mata";
 @import "layouts/partials/entry-share";
