--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -87,11 +87,22 @@
 
   // Entry Excerpt
   .entry-summary {
+    position: relative;
     font-size: $font-size-sm;
     line-height: 1.75;
     text-align: justify;
     height: 6rem;
     overflow: hidden;
+    &:after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: block;
+      content: '';
+      width: 100%;
+      height: 50%;
+      background: linear-gradient(rgba(255,255,255,0) 0,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
+    }
   }
 
 }
