add: page loading
for mdl-componentupgraded

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -25,6 +25,7 @@
 @import "components/pagination";
 @import "components/breadcrumb";
 @import "components/mokuji";
+@import "components/loader";
 
 // Layout
 @import "layouts/header";
