--- a/assets/styles/_animation.scss
+++ b/assets/styles/_animation.scss
@@ -12,6 +12,17 @@
   }
 }
 
+@keyframes spiner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 // Other
 // .animation-jelly {
 //     animation: jelly 1s linear;
