replace css effect with animation SVG

--- a/assets/styles/components/_loader.scss
+++ b/assets/styles/components/_loader.scss
@@ -3,29 +3,25 @@
   height: 100%;
   width: 100%;
   z-index: 10;
-  transition: opacity .6s linear;
-  @extend .mdl-color--white;
+  background-color: rgba(0,0,0, .5);  // same mdl-layout__obfuscator BG
+  pointer-events: none;
 
   .loader-inner {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     height: 100%;
-     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
   }
 
   .loader-spinner {
-    border-top: .8rem solid rgba(0,0,0, .2);
-    border-right: .8rem solid rgba(0,0,0, .2);
-    border-bottom: .8rem solid rgba(0,0,0, .2);
-    border-left: .8rem solid #333;
-    animation: spiner .8s infinite linear;
-
-    &,
-    &:after {
-      border-radius: 50%;
+    svg {
       width: 5rem;
       height: 5rem;
+      path,
+      rect {
+        fill: #fff;
+      }
     }
   }
 
