replace js fadeout with css animation

--- a/assets/styles/components/_loader.scss
+++ b/assets/styles/components/_loader.scss
@@ -6,6 +6,10 @@
   background-color: rgba(0,0,0, .5);  // same mdl-layout__obfuscator BG
   pointer-events: none;
 
+  &.is-loaded {
+    animation: fadeOut 0.8s $animation-curve-fast-out-slow-in forwards;
+  }
+
   .loader-inner {
     display: flex;
     align-items: center;
