--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -82,6 +82,7 @@ $color-accent-contrast: $palette-grey-700;
 // original
 $link-color:            unquote("rgb(#{$palette-blue-A200})");
 $link-hover-color:      unquote("rgb(#{$palette-blue-A400})");
+$link-visit-color:      unquote("rgb(#{$palette-purple-A400})");
 $link-border-color:     unquote("rgb(#{$palette-blue-100})");
 
 $table-border-color:    unquote("rgb(#{$palette-grey-200})");
