--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,6 +17,8 @@
 @import "animation";
 @import "font";
 
+@import "mixin/neat-flex-grid";
+
 @import "common/global";
 @import "common/type";
 @import "common/grid";
