--- a/assets/styles/common/_type.scss
+++ b/assets/styles/common/_type.scss
@@ -51,6 +51,13 @@ code {
   font-feature-settings: "zero" 1;
 }
 
+pre {
+  overflow: visible;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 ul,
 ol {
   margin-top: 0;
