--- a/assets/styles/layouts/partials/_entry.scss
+++ b/assets/styles/layouts/partials/_entry.scss
@@ -1,4 +1,5 @@
 .entry {
+  @include flex-item(100%, 1);  // $min-width, $max-cols
   padding: 1rem 1.5rem;
   border-radius: ($spacer * .125);
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
@@ -52,7 +53,7 @@
   li + li {
     margin-top: 0.25rem;
   }
-  
+
   blockquote {
     // position: relative;
     padding: 1.6rem;
