Revert "use flexbox layout"
This reverts commit f90a097ccf4f50d8c351a755857913950cbbbaeb.

--- a/assets/styles/common/_grid.scss
+++ b/assets/styles/common/_grid.scss
@@ -18,9 +18,8 @@
 }
 
 .main-container {
-  @include flex-grid;
   min-height: calc(100vh - #{$layout-desktop-header-height});
-  // max-width: $container-max-width;
+  max-width: $container-max-width;
 
   @media screen and (max-width: $layout-screen-size-threshold) {
     min-height: calc(100vh - #{$layout-mobile-header-height});
