--- a/assets/styles/plugins/_prismjs.scss
+++ b/assets/styles/plugins/_prismjs.scss
@@ -27,10 +27,14 @@ pre[class*="language-"] {
   font-size: inherit;
   direction: ltr;
   text-align: left;
+  white-space: pre;
   word-spacing: normal;
   word-break: normal;
 
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
   tab-size: 4;
+
   hyphens: none;
 
   // background: $base07;
