--- a/assets/styles/components/_breadcrumb.scss
+++ b/assets/styles/components/_breadcrumb.scss
@@ -19,7 +19,7 @@
 
     a {
       color: inherit;
-      border: none;
+      border: 0;
       &:hover {
         text-decoration: underline;
       }
