--- a/assets/styles/components/_mokuji.scss
+++ b/assets/styles/components/_mokuji.scss
@@ -14,7 +14,7 @@
   padding-left: 1rem;
 
   a {
-    border: none !important;
+    border: 0 !important;
     &:hover {
       text-decoration: underline;
     }
