--- a/assets/styles/layouts/partials/_entry-similar.scss
+++ b/assets/styles/layouts/partials/_entry-similar.scss
@@ -1,6 +1,6 @@
 .entry-similar {
   a {
-    border: none !important;
+    border: 0 !important;
     &:hover {
       text-decoration: underline;
     }
