--- a/assets/styles/plugins/_prismjs.scss
+++ b/assets/styles/plugins/_prismjs.scss
@@ -7,12 +7,12 @@ Original Base16 color scheme by Chris Kempson (https://github.com/chriskempson/b
 
 $base00: #1d1f21;
 $base01: #282a2e;
-$base02: #373b41;
+$base02: #43484f;
 $base03: #969896;
 $base04: #b4b7b4;
 $base05: #c5c8c6;
 $base06: #e0e0e0;
-$base07: #ffffff;
+$base07: #fff;
 $base08: #cc6666;
 $base09: #de935f;
 $base0a: #f0c674;
