--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -1,12 +1,12 @@
 .card-container {
   max-height: 23rem;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .12);
   cursor: pointer;
   transition: box-shadow .3s ease;
   will-change: transform;
 
   &:hover {
-    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .2);
     .entry-image-sheet {
       transform: scale(1.15);
     }
@@ -62,7 +62,7 @@
     height: inherit;
     background: unquote("rgb(#{$palette-grey-50})") 50% no-repeat;
     background-size: cover;
-    transition: transform 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform .2s cubic-bezier(.165, .84, .44, 1);
   }
 
   // Entry Title
@@ -94,7 +94,7 @@
       content: '';
       width: 100%;
       height: 50%;
-      background: linear-gradient(rgba(255,255,255,0) 0,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
+      background: linear-gradient(rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
     }
   }
 
