--- a/assets/styles/layouts/partials/_entry-mata.scss
+++ b/assets/styles/layouts/partials/_entry-mata.scss
@@ -15,7 +15,7 @@
       }
       a {
         color: inherit;
-        border: none;
+        border: 0;
         &:hover {
           text-decoration: underline;
         }
