--- a/assets/styles/layouts/partials/_entry-share.scss
+++ b/assets/styles/layouts/partials/_entry-share.scss
@@ -1,7 +1,7 @@
 $twitter-color:  #55acee;
 $facebook-color: #3b5998;
 $hatena-color:   #2c6ebd;
-$line-color:     #00C300;
+$line-color:     #00c300;
 
 .entry-share {
   list-style: none;
@@ -9,7 +9,7 @@ $line-color:     #00C300;
   text-align: center;
 
   a {
-    border: none !important;
+    border: 0 !important;
   }
 
   > li {
