:shower: clean import css

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,10 +8,10 @@
 
 // prism.js
 @import "plugins/prismjs";
-@import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
+@import "plugins/prism-line-numbers";
 
 // image-zoom
-@import "~image-zoom/dist/imagezoom.css";
+@import "plugins/image-zoom";
 
 // styles
 @import "animation";
