--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -1,101 +1,83 @@
-.card-container {
-  max-height: 23rem;
+.article-container {
+  padding-bottom: 1rem;
+  border-radius: ($spacer * .125);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .12);
-  cursor: pointer;
-  transition: box-shadow .3s ease;
-  will-change: transform;
+  overflow: hidden;
+  @extend .mdl-color--white;
 
-  &:hover {
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, .2);
-    .entry-image-sheet {
-      transform: scale(1.15);
+  h1 {
+    margin: 0;
+    padding: 1rem;
+    font-size: $font-size-h2;
+    font-weight: normal;
+    border-bottom: 1px solid unquote("rgb(#{$palette-grey-100})");
+  }
+
+  .entry-wrap {
+    padding: 1rem;
+    transition: background .3s;
+
+    a {
+      color: inherit;
+      // for display:table
+      border-collapse: separate;
+      border-spacing: 1rem 0;
+      &:focus {
+        outline: 0;
+      }
     }
-    .entry-title {
-      color: $link-hover-color;
+
+    &:hover {
+      cursor: pointer;
+      @extend .mdl-color--grey-100;
+      .entry-image-sheet {
+        transform: scale(1.15);
+      }
     }
   }
 
-  .entry-wrap {  // <a>
-    max-height: inherit;
-
-    &:active,
-    &:focus {
-      outline: 0;
-    }
-
-    > *:first-child {
-      padding-bottom: 0;
-    }
-    > *:last-child {
-      padding-top: 0;
-      padding-bottom: 1rem;
-    }
-
+  .entry-image,
+  .entry-body {
+    display: table-cell;
+    vertical-align: top;
   }
 
-  .mdl-card__title,
-  .mdl-card__supporting-text,
-  .mdl-card__actions {
-    width: 100%;
-  }
-
-  // Thumbnail Image
   .entry-image {
-    width: 100%;
-    height: 12rem;
+    @include size(80px);
+    border-radius: ($spacer * .125);
     overflow: hidden;
 
     .entry-image-none {
-      display: table;
       text-align: center;
-      height: 100%;
-      width: 100%;
+      line-height: 80px;
       > .material-icons {
-        font-size: 6rem;
-        display: table-cell;
-        vertical-align: middle;
-        color: unquote("rgb(#{$palette-grey-300})");
+        font-size: 2rem;
+        @include size(2rem);
+        @extend .mdl-color-text--grey-300;
       }
     }
   }
   .entry-image-sheet {
+    width: inherit;
     height: inherit;
     background: unquote("rgb(#{$palette-grey-50})") 50% no-repeat;
     background-size: cover;
     transition: transform .2s cubic-bezier(.165, .84, .44, 1);
   }
 
-  // Entry Title
-  .mdl-card__title {
-    padding-bottom: 0;
-  }
+  // .entry-header {}
   .entry-title {
-    font-weight: normal;
     color: inherit;
+    font-weight: normal;
     font-size: $font-size-h3;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    display: block;
+    margin: 0 0 .5rem;
   }
-
-  // Entry Excerpt
   .entry-summary {
-    position: relative;
     font-size: $font-size-sm;
-    line-height: 1.75;
-    height: 6rem;
-    overflow: hidden;
-    &:after {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      display: block;
-      content: '';
-      width: 100%;
-      height: 50%;
-      background: linear-gradient(rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 1) 100%);
-    }
+    @extend .mdl-color-text--grey-600;
+  }
+  .entry-footer {
+    text-align: right;
   }
 
 }
