--- a/assets/styles/components/_breadcrumb.scss
+++ b/assets/styles/components/_breadcrumb.scss
@@ -1,10 +1,10 @@
 .breadcrumb {
   font-size: $font-size-sm;
-  @extend .mdl-color-text--grey-400;
-
+  word-wrap: break-word;
+  list-style: none;
   padding: 0;
   margin-bottom: 2rem;
-  list-style: none;
+  @extend .mdl-color-text--grey-400;
   @include clearfix;
 
   > li {
@@ -14,7 +14,7 @@
       @extend .mdl-color-text--grey-600;
     }
     &:not(:last-child) {
-     margin-right: 8px;
+     margin-right: .5rem;
     }
 
     a {
