--- a/assets/styles/layouts/partials/_entry.scss
+++ b/assets/styles/layouts/partials/_entry.scss
@@ -1,7 +1,7 @@
 .entry {
   padding: 1rem 1.5rem;
   border-radius: ($spacer * .125);
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .12);
   @extend .mdl-color--white, .mdl-color-text--grey-700;
 
   > header {
@@ -14,13 +14,14 @@
   h1 {
     font-weight: normal;
     line-height: 1.3;
+    word-wrap: break-word;
     margin: ($spacer / 2) auto;
   }
 
   a {
     color: $link-color;
     border-bottom: 1px solid $link-border-color;
-    padding: 0 0 1px 0;
+    padding-bottom: 1px;
 
     &:hover {
       border-color: $link-color;
@@ -30,8 +31,18 @@
 }
 
 .entry-content {
-  p, pre, blockquote, ul, ol, dl, figure, table, form, img, div {
-    margin: 0 0 1.8rem;
+  p,
+  pre,
+  > blockquote,
+  > ul,
+  > ol,
+  dl,
+  > figure,
+  > table,
+  form,
+  > img,
+  div {
+    margin-bottom: 2rem;
   }
 
   *:not(pre) > code {
@@ -54,14 +65,15 @@
   }
 
   blockquote {
-    // position: relative;
     padding: 1.6rem;
     margin-left: .8em;
     border-left: 4px solid unquote("rgb(#{$palette-grey-200})");
     @extend .mdl-color-text--grey-500;
 
-    > *:first-child,
-    > *:last-child {
+    p:first-child {
+      margin-top: 0;
+    }
+    p:last-child {
       margin-bottom: 0;
     }
 
