--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -17,7 +17,7 @@ $entry-thumbnail-size: 80px;
 
   .entry-wrap {
     padding: 1rem;
-    transition: background .3s;
+    transition: background .3s $animation-curve-default;
 
     a {
       color: inherit;
@@ -56,7 +56,7 @@ $entry-thumbnail-size: 80px;
       max-height: $entry-thumbnail-size;
       background: unquote("rgb(#{$palette-grey-50})") 50% no-repeat;
       background-size: cover;
-      transition: transform .2s cubic-bezier(.165, .84, .44, 1);
+      transition: transform .2s cubic-bezier(.08, .82, .17, 1);
     }
 
     .entry-image-none {
