--- a/assets/styles/plugins/_image-zoom.scss
+++ b/assets/styles/plugins/_image-zoom.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, .85);
-  transition: opacity .3s;
+  transition: opacity .3s $animation-curve-default;
   z-index: 500;
   opacity: 0;
 
@@ -20,7 +20,7 @@
 
 .zoom-image-clone {
   position: fixed;
-  transition: transform .23s linear;
+  transition: transform .23s $animation-curve-default;
   z-index: 500;
   cursor: zoom-out;
 }
