--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,5 +1,5 @@
 .header-navigation {
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, .24);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
   line-height: 1;
   @extend .mdl-color--white;
 
