--- a/assets/styles/_material-design-lite.scss
+++ b/assets/styles/_material-design-lite.scss
@@ -8,9 +8,9 @@
 @import "~material-design-lite/src/palette/palette";
 @import "~material-design-lite/src/ripple/ripple";
 @import "~material-design-lite/src/animation/animation";
-@import "~material-design-lite/src/badge/badge";
+// @import "~material-design-lite/src/badge/badge";
 @import "~material-design-lite/src/button/button";
-@import "~material-design-lite/src/card/card";
+// @import "~material-design-lite/src/card/card";
 // @import "~material-design-lite/src/checkbox/checkbox";
 // @import "~material-design-lite/src/data-table/data-table";
 // @import "~material-design-lite/src/dialog/dialog";
@@ -23,11 +23,20 @@
 @import "~material-design-lite/src/layout/layout";
 // @import "~material-design-lite/src/radio/radio";
 // @import "~material-design-lite/src/slider/slider";
-@import "~material-design-lite/src/snackbar/snackbar";
+// @import "~material-design-lite/src/snackbar/snackbar";
 // @import "~material-design-lite/src/spinner/spinner";
-@import "~material-design-lite/src/switch/switch";
+// @import "~material-design-lite/src/switch/switch";
 // @import "~material-design-lite/src/tabs/tabs";
 @import "~material-design-lite/src/textfield/textfield";
-@import "~material-design-lite/src/tooltip/tooltip";
+// @import "~material-design-lite/src/tooltip/tooltip";
 @import "~material-design-lite/src/shadow/shadow";
 @import "~material-design-lite/src/grid/grid";
+
+// mdl-ext
+// Configuration and helpers
+@import '~mdl-ext/src/variables';
+@import '~mdl-ext/src/mixins';
+@import '~mdl-ext/src/functions';
+
+// Components
+@import '~mdl-ext/src/sticky-header/sticky-header';
