--- a/assets/styles/tweak/_mdl.scss
+++ b/assets/styles/tweak/_mdl.scss
@@ -5,9 +5,9 @@
 }
 
 // header fixed
-.mdl-layout__content {
-  flex-shrink: 0;
-}
+// .mdl-layout__content {
+  // flex-shrink: 0;
+// }
 .mdl-layout__drawer.is-visible~.mdl-layout__content {
   overflow: hidden;
   height: calc(100vh - #{$layout-desktop-header-height});
@@ -17,9 +17,9 @@
   }
 }
 
-.mdl-layout__header {
-  display: block !important;  // always visible
-}
+// .mdl-layout__header {
+  // display: block !important;  // always visible
+// }
 
 .mdl-textfield__input {
   border-width: 2px;
@@ -53,4 +53,10 @@
 .mdl-layout__drawer-button,
 .mdl-layout__drawer-button {
   line-height: 1.75;
+}
+
+
+// mdl-ext
+.mdlext-layout__sticky-header.mdlext-is-scroll {
+  background: rgba(255, 255, 255, .9);
 }
