update: base font family

--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -1,3 +1,20 @@
+// YuGothic font
+@font-face {
+  font-family: "YuGoMedium";
+  font-weight: normal;
+  src: local("YuGothic-Medium"),
+       local("Yu Gothic Medium");
+}
+
+@font-face {
+  font-family: "YuGoMedium";
+  font-weight: bold;
+  src: local("YuGothic-Bold"),
+       local("Yu Gothic");
+}
+
+
+// icon font
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
@@ -54,6 +71,7 @@
     }
   }
 }
+
 
 // Emoji
 // @link https://hail2u.net/blog/webdesign/emoji-shotcut-family.html
