--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -31,7 +31,7 @@ $modular-scale-ratio: $major-second;
 //
 // Font
 // -------------------------
-$font-family-base:             -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, Emoji !default;
+$font-family-base:             -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN", YuGoMedium, Meiryo, sans-serif, Emoji !default;
 $font-family-monospace:        Consolas, "Liberation Mono", Menlo, Courier, monospace, Emoji !default;
 $font-weight-base:             normal;
 
